{
  "version": 4,
  "terraform_version": "1.7.5",
  "serial": 39,
  "lineage": "7c7fa575-6259-da30-52f8-b5b7c5466f59",
  "resources": [
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "stack_sub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet-02400cb8f1c59e13e",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264269915:subnet/subnet-02400cb8f1c59e13e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "available_ip_address_count": 4088,
            "cidr_block": "172.31.64.0/20",
            "default_for_az": true,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02400cb8f1c59e13e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "058264269915",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "vpc_id": "vpc-0aec164c76a2316bd"
          }
        },
        {
          "index_key": "subnet-02ea88fa3a7a93127",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264269915:subnet/subnet-02ea88fa3a7a93127",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az2",
            "available_ip_address_count": 4086,
            "cidr_block": "172.31.80.0/20",
            "default_for_az": true,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02ea88fa3a7a93127",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "058264269915",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "vpc_id": "vpc-0aec164c76a2316bd"
          }
        },
        {
          "index_key": "subnet-03ddb507aa5009aae",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264269915:subnet/subnet-03ddb507aa5009aae",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "available_ip_address_count": 4089,
            "cidr_block": "172.31.0.0/20",
            "default_for_az": true,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03ddb507aa5009aae",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "058264269915",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "vpc_id": "vpc-0aec164c76a2316bd"
          }
        },
        {
          "index_key": "subnet-094c07f83d09e1880",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264269915:subnet/subnet-094c07f83d09e1880",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "available_ip_address_count": 4091,
            "cidr_block": "172.31.48.0/20",
            "default_for_az": true,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-094c07f83d09e1880",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "058264269915",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "vpc_id": "vpc-0aec164c76a2316bd"
          }
        },
        {
          "index_key": "subnet-0b89dfceab4a1e4f7",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264269915:subnet/subnet-0b89dfceab4a1e4f7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "available_ip_address_count": 4085,
            "cidr_block": "172.31.16.0/20",
            "default_for_az": true,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b89dfceab4a1e4f7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "058264269915",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "vpc_id": "vpc-0aec164c76a2316bd"
          }
        },
        {
          "index_key": "subnet-0ffd90203c1d3e9fc",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264269915:subnet/subnet-0ffd90203c1d3e9fc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "available_ip_address_count": 4083,
            "cidr_block": "172.31.32.0/20",
            "default_for_az": true,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ffd90203c1d3e9fc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "058264269915",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "vpc_id": "vpc-0aec164c76a2316bd"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-068962ad5bcb72d22",
            "arn": "arn:aws:ec2:us-east-1:058264269915:instance/i-06f7b3e0bfc3c0bfd",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1f",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06f7b3e0bfc3c0bfd",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "stackkp",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f3acef869e0e037d",
            "private_dns": "ip-172-31-66-202.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.66.202",
            "public_dns": "ec2-44-200-184-25.compute-1.amazonaws.com",
            "public_ip": "44.200.184.25",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:us-east-1:058264269915:key/24bc6b14-1a17-4d41-9d87-c1c47a6c427f",
                "throughput": 0,
                "volume_id": "vol-093e77a4b2660ec13",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "Stack-WebDMZ"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02400cb8f1c59e13e",
            "tags": {
              "Environment": "dev",
              "Name": "Application_Server_Aut-0",
              "OwnerEmail": "nicholas.jmoran@hotmail.com"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Application_Server_Aut-0",
              "OwnerEmail": "nicholas.jmoran@hotmail.com"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e0a8726b5ae33f45"
            ]
          },
          "dependencies": [
            "aws_key_pair.Stack_KP",
            "aws_security_group.stack-sg",
            "data.aws_ami.stack_ami",
            "data.template_file.bootstrap"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-068962ad5bcb72d22",
            "arn": "arn:aws:ec2:us-east-1:058264269915:instance/i-011ad468c18fa79ec",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-011ad468c18fa79ec",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "stackkp",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f6e2ff75832a5efb",
            "private_dns": "ip-172-31-80-200.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.80.200",
            "public_dns": "ec2-18-204-195-90.compute-1.amazonaws.com",
            "public_ip": "18.204.195.90",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:us-east-1:058264269915:key/24bc6b14-1a17-4d41-9d87-c1c47a6c427f",
                "throughput": 0,
                "volume_id": "vol-022403a0475074669",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "Stack-WebDMZ"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02ea88fa3a7a93127",
            "tags": {
              "Environment": "dev",
              "Name": "Application_Server_Aut-1",
              "OwnerEmail": "nicholas.jmoran@hotmail.com"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Application_Server_Aut-1",
              "OwnerEmail": "nicholas.jmoran@hotmail.com"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e0a8726b5ae33f45"
            ]
          },
          "dependencies": [
            "aws_key_pair.Stack_KP",
            "aws_security_group.stack-sg",
            "data.aws_ami.stack_ami",
            "data.template_file.bootstrap"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-068962ad5bcb72d22",
            "arn": "arn:aws:ec2:us-east-1:058264269915:instance/i-04a863c857b059c3a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04a863c857b059c3a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "stackkp",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-07d86e2869ff80842",
            "private_dns": "ip-172-31-9-144.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.9.144",
            "public_dns": "ec2-44-199-234-148.compute-1.amazonaws.com",
            "public_ip": "44.199.234.148",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:us-east-1:058264269915:key/24bc6b14-1a17-4d41-9d87-c1c47a6c427f",
                "throughput": 0,
                "volume_id": "vol-09bd9a4b7a02ca643",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "Stack-WebDMZ"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03ddb507aa5009aae",
            "tags": {
              "Environment": "dev",
              "Name": "Application_Server_Aut-2",
              "OwnerEmail": "nicholas.jmoran@hotmail.com"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Application_Server_Aut-2",
              "OwnerEmail": "nicholas.jmoran@hotmail.com"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e0a8726b5ae33f45"
            ]
          },
          "dependencies": [
            "aws_key_pair.Stack_KP",
            "aws_security_group.stack-sg",
            "data.aws_ami.stack_ami",
            "data.template_file.bootstrap"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-068962ad5bcb72d22",
            "arn": "arn:aws:ec2:us-east-1:058264269915:instance/i-098c328d0198a9d7d",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1e",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-098c328d0198a9d7d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "stackkp",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-006a6c4dfbb1d515c",
            "private_dns": "ip-172-31-51-194.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.51.194",
            "public_dns": "ec2-54-237-89-78.compute-1.amazonaws.com",
            "public_ip": "54.237.89.78",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:us-east-1:058264269915:key/24bc6b14-1a17-4d41-9d87-c1c47a6c427f",
                "throughput": 0,
                "volume_id": "vol-00bdcd086216ac267",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "Stack-WebDMZ"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-094c07f83d09e1880",
            "tags": {
              "Environment": "dev",
              "Name": "Application_Server_Aut-3",
              "OwnerEmail": "nicholas.jmoran@hotmail.com"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Application_Server_Aut-3",
              "OwnerEmail": "nicholas.jmoran@hotmail.com"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e0a8726b5ae33f45"
            ]
          },
          "dependencies": [
            "aws_key_pair.Stack_KP",
            "aws_security_group.stack-sg",
            "data.aws_ami.stack_ami",
            "data.template_file.bootstrap"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-068962ad5bcb72d22",
            "arn": "arn:aws:ec2:us-east-1:058264269915:instance/i-096434c78537eccff",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-096434c78537eccff",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "stackkp",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-069677d9f492b3bc8",
            "private_dns": "ip-172-31-28-10.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.28.10",
            "public_dns": "ec2-52-91-197-227.compute-1.amazonaws.com",
            "public_ip": "52.91.197.227",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:us-east-1:058264269915:key/24bc6b14-1a17-4d41-9d87-c1c47a6c427f",
                "throughput": 0,
                "volume_id": "vol-06b6bb7cbe0500cbf",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "Stack-WebDMZ"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b89dfceab4a1e4f7",
            "tags": {
              "Environment": "dev",
              "Name": "Application_Server_Aut-4",
              "OwnerEmail": "nicholas.jmoran@hotmail.com"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Application_Server_Aut-4",
              "OwnerEmail": "nicholas.jmoran@hotmail.com"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e0a8726b5ae33f45"
            ]
          },
          "dependencies": [
            "aws_key_pair.Stack_KP",
            "aws_security_group.stack-sg",
            "data.aws_ami.stack_ami",
            "data.template_file.bootstrap"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-068962ad5bcb72d22",
            "arn": "arn:aws:ec2:us-east-1:058264269915:instance/i-07e4b8b70c878f6eb",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07e4b8b70c878f6eb",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "stackkp",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-09b66dde19fe86fbb",
            "private_dns": "ip-172-31-35-213.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.35.213",
            "public_dns": "ec2-3-89-70-152.compute-1.amazonaws.com",
            "public_ip": "3.89.70.152",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:us-east-1:058264269915:key/24bc6b14-1a17-4d41-9d87-c1c47a6c427f",
                "throughput": 0,
                "volume_id": "vol-0b3117275970fb64c",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "Stack-WebDMZ"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ffd90203c1d3e9fc",
            "tags": {
              "Environment": "dev",
              "Name": "Application_Server_Aut-5",
              "OwnerEmail": "nicholas.jmoran@hotmail.com"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Application_Server_Aut-5",
              "OwnerEmail": "nicholas.jmoran@hotmail.com"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e0a8726b5ae33f45"
            ]
          },
          "dependencies": [
            "aws_key_pair.Stack_KP",
            "aws_security_group.stack-sg",
            "data.aws_ami.stack_ami",
            "data.template_file.bootstrap"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "stack-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264269915:security-group/sg-0e0a8726b5ae33f45",
            "description": "Stack IT Security Group For CliXX System",
            "egress": [],
            "id": "sg-0e0a8726b5ae33f45",
            "ingress": [],
            "name": "Stack-WebDMZ",
            "name_prefix": "",
            "owner_id": "058264269915",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0aec164c76a2316bd"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-304416970",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0e0a8726b5ae33f45",
            "security_group_rule_id": "sgr-0007d4f897dc33e58",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.stack-sg"
          ]
        }
      ]
    }
  ]
}